# simple_cnn_training

./: .comet.config  .gitignore  README.md  display_environment.py  main.py  main_pl.py  pyproject.toml  requirements.pytorch.txt  requirements.txt
args/: arg_parse.py
config/: config.yaml  default_config.yaml
config/common/: common.yaml
config/dataset/: tiny-imagenet.yaml
config/model/: resnet18.yaml
config/resnet18/: resnet18_config1.yaml
configs/: __init__.py  default.yaml  flatten_dict.py
configs/experiments/exp01/: exp01_default.yaml  exp01_lr=0.0001.yaml  exp01_lr=0.0008.yaml
dataset/: dataloader_factory.py  dataset_pl.py
logger/: logger_pl.py
model/: simple_lightning_model.py
