[project]
name = "simple_cnn_training"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "av>=17.0.0",
    "comet-ml>=3.57.3",
    "datasets[vision]>=4.8.4",
    "flake8-fixme>=1.1.1",
    "flake8-functions-names>=0.4.0",
    "flake8-variables-names>=0.0.6",
    "imgaug>=0.4.0",
    "jupyter>=1.1.1",
    "kornia>=0.6.10",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.2",
    "pep8-naming>=0.15.1",
    "pytorchvideo",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers[torch]>=5.5.3",
    "webdataset>=1.0.2",
    "wheel>=0.46.3",
]

# [tool.autopep8]
# # https://github.com/hhatto/autopep8#configuration
# # https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
# max_line_length = 120
# ignore = "E5,E4"
# # E4 Import
# # E5 Line length
# aggressive = 2

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-format
line-length = 120

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
pytorchvideo = { git = "https://github.com/facebookresearch/pytorchvideo.git" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
# ref: uv https://docs.astral.sh/uv/guides/integration/pytorch/#installing-pytorch
